--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Mukti Jaenal - Computer Science Student & Full-Stack Developer at UKSW Salatiga. Passionate about building innovative solutions with React, Python, and modern web technologies." />
-    <meta name="keywords" content="Mukti Jaenal, Computer Science, Full-Stack Developer, UKSW Salatiga, React, Python, Portfolio" />
+    <meta name="description" content="Mukti Jaenal - Computer Science Student & Software Engineer at UKSW Salatiga. Passionate about building innovative solutions with React, Python, and modern web technologies." />
+    <meta name="keywords" content="Mukti Jaenal, Computer Science, Software Engineer, UKSW Salatiga, React, Python, Portfolio" />
     <meta name="author" content="Mukti Jaenal" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://muktijaenal.dev/" />
-    <meta property="og:title" content="Mukti Jaenal - CS Student & Developer" />
-    <meta property="og:description" content="Computer Science Student & Full-Stack Developer at UKSW Salatiga. Building innovative solutions with modern technologies." />
-    
+    <meta property="og:title" content="Mukti Jaenal - CS Student & Software Engineer" />
+    <meta property="og:description" content="Computer Science Student & Software Engineer at UKSW Salatiga. Building innovative solutions with modern technologies." />
+
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://muktijaenal.dev/" />
-    <meta property="twitter:title" content="Mukti Jaenal - CS Student & Developer" />
-    <meta property="twitter:description" content="Computer Science Student & Full-Stack Developer at UKSW Salatiga. Building innovative solutions with modern technologies." />
+    <meta property="twitter:title" content="Mukti Jaenal - CS Student & Software Engineer" />
+    <meta property="twitter:description" content="Computer Science Student & Software Engineer at UKSW Salatiga. Building innovative solutions with modern technologies." />
 
-    <title>Mukti Jaenal - CS Student & Full-Stack Developer</title>
+    <title>Mukti Jaenal - CS Student & Software Engineer</title>
   </head>
   <body>
     <div id="root"></div>
